feat: add error on unfilled words

--- a/frontend/src/styles/variables.scss
+++ b/frontend/src/styles/variables.scss
@@ -14,5 +14,7 @@ $font-size-secondary: 13px;
 $border-radius-main: 8px;
 $brand-color: #af1e65;
 
+$error-message-color: #bf0000;
+
 $mobile-breakpoint: 768px;
 $tablet-breakpoint: 1024px;
