feat: WIP add offers

--- a/frontend/src/styles/variables.scss
+++ b/frontend/src/styles/variables.scss
@@ -10,11 +10,21 @@ $background-color-thirdly: #f1f3f5;
 $font-family-primary: Helvetica, Arial, sans-serif;
 $font-size-primary: 16px;
 $font-size-secondary: 13px;
+$font-size-thirdly: 11px;
+
+$font-size-price-big: 32px;
+$font-size-price-medium: 24px;
+$font-size-price-small: 16px;
+
+$font-size-time-medium: 22px;
+$font-size-time-small: 16px;
+
+
 
 $border-radius-main: 8px;
 $brand-color: #af1e65;
 
 $error-message-color: #bf0000;
 
-$mobile-breakpoint: 768px;
-$tablet-breakpoint: 1024px;
+$tablet-breakpoint: 768px;
+$desktop-breakpoint: 1024px;
