feat: add focus state to offers

--- a/frontend/src/styles/variables.scss
+++ b/frontend/src/styles/variables.scss
@@ -28,3 +28,5 @@ $error-message-color: #bf0000;
 
 $tablet-breakpoint: 768px;
 $desktop-breakpoint: 1024px;
+
+$focus-outline: 2px solid $brand-color;
